--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <app-state-distributed debug side-debug></app-state-distributed>
+    <app-state-distributed sender="BA_UI" debug side-debug></app-state-distributed>
     <custom-app>
       <main class="container">
         <section>
