--- a/index.html
+++ b/index.html
@@ -13,46 +13,21 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="AppTitle" />
     <meta name="format-detection" content="telephone=no" />
-    <title>Haxademic.js</title>
-    <link rel="stylesheet" href="css/pico.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>Socket Server Frontend</title>
+    <link rel="stylesheet" href="shared/css/pico.css" />
+    <link rel="stylesheet" href="shared/css/styles.css" />
   </head>
   <body>
-    <app-state-distributed sender="BA_UI" debug side-debug></app-state-distributed>
     <custom-app>
       <main class="container">
         <section>
-          <h1>AppStoreDistributed Demo</h1>
-          <p>A nice way to communicate between apps</p>
-          <h4>Buttons with shared key: APP_STATE</h4>
+          <h1>AppStore Demos</h1>
+          <p>It's a nice way to communicate between apps</p>
+          <h4>Check out these examples:</h4>
           <nav>
-            <app-store-button key="APP_STATE" value="ATTRACT">ATTRACT</app-store-button>
-            <app-store-button key="APP_STATE" value="GAMEPLAY">GAMEPLAY</app-store-button>
-            <app-store-button key="APP_STATE" value="GAME_OVER">GAME_OVER</app-store-button>
+            <a href="app-store-demo/index.html">AppStore UI demo</a>
+            <a href="app-store-monitor/index.html">AppStore UI demo</a>
           </nav>
-          <h4>Special Buttons</h4>
-          <nav>
-            <app-store-button key="BTN_PULSE" value="1" momentary>Momentary / Pulse</app-store-button>
-            <app-store-button key="BTN_TOGGLE" value="0" toggle>Toggle</app-store-button>
-          </nav>
-          <h4>Input Fields</h4>
-          <p>
-            <app-store-textfield key="TEXT_INPUT" value=""></app-store-textfield>
-          </p>
-          <p>
-            <app-store-slider key="SLIDER_1" value="0" max="1"></app-store-slider>
-          </p>
-          <!-- <h4>Monitoring</h4>
-          <p>
-            <app-store-monitor key="KINECT_1_DEPTH_HEALTHY" value=""></app-store-monitor>
-            <app-store-monitor key="KINECT_2_DEPTH_HEALTHY" value=""></app-store-monitor>
-            <app-store-monitor key="KINECT_3_DEPTH_HEALTHY" value=""></app-store-monitor>
-          </p> -->
-        </section>
-        <details open>
-          <summary>Event Log</summary>
-          <event-log-view max-length="10"></event-log-view>
-        </details>
       </main>
       <footer class="container">
         <small>Built by us 👋</small>
