WIP: AppStore Monitor

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="../shared/images/icon.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="AppTitle" />
+    <meta name="apple-mobile-web-app-title" content="AppStore" />
     <meta name="format-detection" content="telephone=no" />
     <title>AppStore UI demo</title>
     <link rel="stylesheet" href="../shared/css/pico.css" />
@@ -22,7 +22,7 @@
     <custom-app>
       <main class="container">
         <section>
-          <h1>AppStoreDistributed Demo</h1>
+          <h1>AppStore Demo</h1>
           <p>A nice way to communicate between apps</p>
           <h4>Buttons with shared key: APP_STATE</h4>
           <nav>
