--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h4>Check out these examples:</h4>
           <nav>
             <a href="app-store-demo/index.html">AppStore UI demo</a>
-            <a href="app-store-monitor/index.html">AppStore UI demo</a>
+            <a href="app-store-monitor/index.html">AppStore Monitor</a>
           </nav>
       </main>
       <footer class="container">
