Clean up monitor tables & update flash animation

--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <app-state-distributed debug side-debug></app-state-distributed>
+    <app-state-distributed sender="MONITOR_DEMO" debug side-debug></app-state-distributed>
     <custom-app>
       <header>
         <label>AppStore Monitor</label>
