--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon-precomposed" href="../shared/images/icon.png" />
     <link rel="apple-touch-startup-image" href="../shared/images/icon.png" />
     <link rel="shortcut icon" type="image/x-icon" href="../shared/images/icon.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="AppStore" />
     <meta name="format-detection" content="telephone=no" />
@@ -41,6 +41,9 @@
           </p>
           <p>
             <app-store-slider key="SLIDER_1" value="0" max="1"></app-store-slider>
+          </p>
+          <p>
+            <app-store-heartbeat key="heartbeat_component" value="n/a" interval="2000" show="true"></app-store-heartbeat>
           </p>
           <!-- <h4>Monitoring</h4>
           <p>
