Add app-store-clients web component to list current client connections

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../shared/css/styles.css" />
   </head>
   <body>
-    <app-state-distributed sender="BA_UI" init-keys="APP_STATE BTN_TOGGLE SLIDER_1" debug side-debug></app-state-distributed>
+    <app-state-distributed sender="tablet" init-keys="APP_STATE BTN_TOGGLE SLIDER_1" debug side-debug></app-state-distributed>
     <custom-app>
       <main class="container">
         <section>
