--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -19,13 +19,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <app-state-distributed sender="MONITOR_DEMO" debug side-debug></app-state-distributed>
+    <app-state-distributed sender="monitor" debug side-debug></app-state-distributed>
     <custom-app>
       <header>
         <label>AppStore Monitor</label>
       </header>
       <div id="hud">
         <div>
+          <app-store-clients></app-store-clients>
           <app-store-table></app-store-table>
           <details open>
             <p>
