Add heartbeat animation to clients table

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -43,7 +43,7 @@
             <app-store-slider key="SLIDER_1" value="0" max="1"></app-store-slider>
           </p>
           <p>
-            <app-store-heartbeat key="heartbeat_component" value="n/a" interval="2000" show="true"></app-store-heartbeat>
+            <app-store-heartbeat key="tablet_heartbeat" value="n/a" interval="2000" show="true"></app-store-heartbeat>
           </p>
           <!-- <h4>Monitoring</h4>
           <p>
