--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -41,7 +41,10 @@
         <event-log-table max-length="20"></event-log-table>
       </div>
       <footer>
-        <small>Built by us 👋</small>
+        <small>Built by us 👋 </small>
+        <p>
+          <app-store-heartbeat key="monitor_heartbeat" value="n/a" interval="2000" show="true"></app-store-heartbeat>
+        </p>
       </footer>
     </custom-app>
     <script type="module" src="./js/app.js"></script>
