Update notes & monitor test keys

--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -30,11 +30,11 @@
           <app-store-table></app-store-table>
           <details open>
             <p>
-              <app-store-button key="BTN_PULSE" value="1" momentary>Momentary / Pulse</app-store-button>
-              <app-store-button key="BTN_TOGGLE" value="0" toggle>Toggle</app-store-button>
+              <app-store-button key="btn_pulse" value="1" momentary>Momentary / Pulse</app-store-button>
+              <app-store-button key="btn_toggle" value="0" toggle>Toggle</app-store-button>
             </p>
             <p>
-              <app-store-slider key="SLIDER_1" value="0" max="1"></app-store-slider>
+              <app-store-slider key="slider_1" value="0" max="1"></app-store-slider>
             </p>
           </details>
         </div>
