Add server info in monitor header

--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -24,7 +24,7 @@
       <header>
         <nav>
           <ul>
-            <li><strong>AppStore Monitor</strong></li>
+            <li><strong>AppStore Monitor</strong> @ <a aria-busy="true" data-server-address-display></a></li>
           </ul>
           <ul>
             <li><a data-state-url href="" target="_blank">/state</a></li>
