Refactor server config & hash update into app-store-init, which was renamed from app-state-distributed

--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <app-state-distributed sender="monitor" debug side-debug></app-state-distributed>
+    <app-store-init sender="monitor" debug side-debug></app-store-init>
     <custom-app>
       <header>
         <nav>
