--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -5,10 +5,17 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta content="no" name="imagetoolbar" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="apple-touch-icon-precomposed" href="../shared/images/icon.png" />
     <link rel="apple-touch-startup-image" href="../shared/images/icon.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="../shared/images/icon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../shared/images/icon.png"
+    />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Monitor" />
@@ -24,7 +31,10 @@
       <header>
         <nav>
           <ul>
-            <li><strong>AppStore Monitor</strong> @ <a aria-busy="true" data-server-address-display></a></li>
+            <li>
+              <strong>AppStore Monitor</strong> @
+              <a aria-busy="true" data-server-address-display></a>
+            </li>
           </ul>
           <ul>
             <li><a data-state-url href="" target="_blank">/state</a></li>
@@ -34,7 +44,9 @@
       </header>
       <div id="hud">
         <div>
+          <h4>Clients</h4>
           <app-store-clients></app-store-clients>
+          <h4>AppStore</h4>
           <app-store-table></app-store-table>
           <!-- <details open>
             <summary>Demo controls</summary>
@@ -47,15 +59,28 @@
             </p>
           </details> -->
         </div>
-        <event-log-table max-length="20"></event-log-table>
+        <div>
+          <h4>Event Log</h4>
+          <event-log-table max-length="20"></event-log-table>
+        </div>
       </div>
       <footer>
         <nav>
           <ul>
-            <li><app-store-heartbeat key="monitor_heartbeat" value="n/a" interval="10000" show="true"></app-store-heartbeat></li>
+            <li>
+              <app-store-heartbeat
+                key="monitor_heartbeat"
+                value="n/a"
+                interval="10000"
+                show="true"
+              ></app-store-heartbeat>
+            </li>
           </ul>
           <ul>
-            <li><input type="checkbox" id="log-heartbeats" checked /> Log Heartbeats</li>
+            <li>
+              <input type="checkbox" id="log-heartbeats" checked /> Log
+              Heartbeats
+            </li>
           </ul>
         </nav>
       </footer>
