Finish automatic web component hydration via app-store-init

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../shared/css/styles.css" />
   </head>
   <body>
-    <app-store-init sender="tablet" init-keys="app_state btn_toggle slider_1" debug side-debug></app-store-init>
+    <app-store-init sender="tablet" init-keys="app_state btn_toggle slider_1 text_input" debug side-debug></app-store-init>
     <custom-app>
       <main class="container">
         <section>
