Move header action buttons into dropdown

--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -28,8 +28,16 @@
             <li><strong>AppStore Monitor</strong> @ <a aria-busy="true" data-server-address-display></a></li>
           </ul>
           <ul>
-            <li><a data-state-url href="" target="_blank">/state</a></li>
-            <li><a data-clients-url href="#" target="_blank">/clients</a></li>
+            <li>
+              <details class="dropdown">
+                <summary role="button" class="secondary">Actions</summary>
+                <ul>
+                  <li><a data-state-url href="" target="_blank">/state</a></li>
+                  <li><a data-clients-url href="#" target="_blank">/clients</a></li>
+                  <li><a data-wipe-url href="#" target="_blank">/wipe</a></li>
+                </ul>
+              </details>
+            </li>
           </ul>
         </nav>
       </header>
