Improve icons, add key delete button, and add zoom buttons

--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -35,6 +35,10 @@
                   <li><a data-state-url href="" target="_blank">/state</a></li>
                   <li><a data-clients-url href="#" target="_blank">/clients</a></li>
                   <li><a data-wipe-url href="#" target="_blank">/wipe</a></li>
+                  <li>
+                    <button data-zoom-out>-</button>
+                    <button data-zoom-in>+</button>
+                  </li>
                 </ul>
               </details>
             </li>
