--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -52,7 +52,8 @@
         </section>
         <details>
           <summary>Event Log</summary>
-          <event-log-view max-length="10"></event-log-view>
+          <!-- <event-log-view max-length="10"></event-log-view> -->
+          <app-store-event-table max-length="10" hide-filters></app-store-event-table>
         </details>
       </main>
       <footer class="container">
