--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -5,10 +5,17 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta content="no" name="imagetoolbar" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="apple-touch-icon-precomposed" href="../shared/images/icon.png" />
     <link rel="apple-touch-startup-image" href="../shared/images/icon.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="../shared/images/icon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../shared/images/icon.png"
+    />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Monitor" />
@@ -20,12 +27,20 @@
   </head>
   <body>
     <app-store-init sender="monitor" debug side-debug></app-store-init>
-    <app-store-heartbeat key="monitor_heartbeat" value="n/a" interval="10000" show="false"></app-store-heartbeat>
+    <app-store-heartbeat
+      key="monitor_heartbeat"
+      value="n/a"
+      interval="10000"
+      show="false"
+    ></app-store-heartbeat>
     <custom-app>
       <header>
         <nav>
           <ul>
-            <li><strong>AppStore Monitor</strong> @ <a aria-busy="true" data-server-address-display></a></li>
+            <li>
+              <strong>AppStore Monitor</strong> @
+              <a aria-busy="true" data-server-address-display></a>
+            </li>
           </ul>
           <ul>
             <li>
@@ -33,7 +48,9 @@
                 <summary role="button" class="secondary">Actions</summary>
                 <ul>
                   <li><a data-state-url href="" target="_blank">/state</a></li>
-                  <li><a data-clients-url href="#" target="_blank">/clients</a></li>
+                  <li>
+                    <a data-clients-url href="#" target="_blank">/clients</a>
+                  </li>
                   <li><a data-wipe-url href="#" target="_blank">/wipe</a></li>
                   <li>
                     <button data-zoom-out>-</button>
@@ -69,7 +86,7 @@
         <div>
           <article>
             <label>Event Log</label>
-            <event-log-table max-length="20"></event-log-table>
+            <app-store-event-table max-length="20"></app-store-event-table>
           </article>
         </div>
       </div>
