Add app-store-health component

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../shared/css/styles.css" />
   </head>
   <body>
-    <app-store-init sender="tablet" init-keys="app_state btn_toggle slider_1 text_input" debug side-debug></app-store-init>
+    <app-store-init sender="tablet" init-keys="app_state btn_toggle slider_1 text_input kinect_1_depth_health kinect_2_depth_health kinect_3_depth_health" debug side-debug></app-store-init>
     <app-store-heartbeat key="tablet_heartbeat" value="n/a" interval="5000" show="false"></app-store-heartbeat>
     <custom-app>
       <main class="container">
@@ -43,12 +43,14 @@
           <p>
             <app-store-slider key="slider_1" value="0" max="1"></app-store-slider>
           </p>
-          <!-- <h4>Monitoring</h4>
-          <p>
-            <app-store-monitor key="KINECT_1_DEPTH_HEALTHY" value=""></app-store-monitor>
-            <app-store-monitor key="KINECT_2_DEPTH_HEALTHY" value=""></app-store-monitor>
-            <app-store-monitor key="KINECT_3_DEPTH_HEALTHY" value=""></app-store-monitor>
-          </p> -->
+          <h4>Monitoring</h4>
+          <p class="grid">
+            <app-store-health key="kinect_1_depth_health" value=""></app-store-health>
+            <app-store-health key="kinect_2_depth_health" value=""></app-store-health>
+          </p>
+          <p class="grid">
+            <app-store-health key="kinect_3_depth_health" value=""></app-store-health>
+          </p>
         </section>
         <details>
           <summary>Event Log</summary>
