Cleanup a bunch of small things & move node-app-demo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon-precomposed" href="./images/icon.png" />
     <link rel="apple-touch-startup-image" href="./images/icon.png" />
     <link rel="shortcut icon" type="image/x-icon" href="./images/icon.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="AppTitle" />
     <meta name="format-detection" content="telephone=no" />
@@ -24,15 +24,14 @@
           <h1>AppStore Demos</h1>
           <p>It's a nice way to communicate between apps</p>
           <h4>Check out these examples:</h4>
-          <nav>
-            <a href="app-store-demo/index.html">AppStore UI demo</a>
-            <a href="app-store-monitor/index.html">AppStore Monitor</a>
-          </nav>
+          <p>
+            <a href="app-store-demo/index.html"><button>UI demo</button></a>
+            <a href="app-store-monitor/index.html"><button>Monitor</button></a>
+          </p>
       </main>
       <footer class="container">
         <small>Built by us 👋</small>
       </footer>
     </custom-app>
-    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
