--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -5,22 +5,15 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta content="no" name="imagetoolbar" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="apple-touch-icon-precomposed" href="../shared/images/icon.png" />
     <link rel="apple-touch-startup-image" href="../shared/images/icon.png" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="../shared/images/icon.png"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="../shared/images/icon.png" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Monitor" />
     <meta name="format-detection" content="telephone=no" />
-    <title>AppStore UI demo</title>
+    <title>AppStore Monitor</title>
     <link rel="stylesheet" href="../shared/css/pico.css" />
     <link rel="stylesheet" href="../shared/css/styles.css" />
     <link rel="stylesheet" href="./css/styles.css" />
