Fix monitor title

--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -17,15 +17,11 @@
     <link rel="stylesheet" href="../shared/css/pico.css" />
     <link rel="stylesheet" href="../shared/css/styles.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <app-store-init sender="monitor" debug side-debug></app-store-init>
-    <app-store-heartbeat
-      key="monitor_heartbeat"
-      value="n/a"
-      interval="10000"
-      show="false"
-    ></app-store-heartbeat>
+    <app-store-heartbeat key="monitor_heartbeat" value="n/a" interval="10000" show="false"></app-store-heartbeat>
     <custom-app>
       <header>
         <nav>
