--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -37,9 +37,7 @@
                 <summary role="button" class="secondary">Actions</summary>
                 <ul>
                   <li><a data-state-url href="" target="_blank">/state</a></li>
-                  <li>
-                    <a data-clients-url href="#" target="_blank">/clients</a>
-                  </li>
+                  <li><a data-clients-url href="#" target="_blank">/clients</a></li>
                   <li><a data-wipe-url href="#" target="_blank">/wipe</a></li>
                   <li>
                     <button data-zoom-out>-</button>
