--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../shared/css/styles.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" src="../shared/js/haxademic.js/components/_register-components.js"></script>
   </head>
   <body>
     <app-store-init sender="monitor" debug side-debug></app-store-init>
