--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -40,9 +40,15 @@
           </nav>
           <h4>Input Fields</h4>
           <p>
+            <label>app-store-textfield</label>
             <app-store-textfield key="text_input" value=""></app-store-textfield>
           </p>
           <p>
+            <label>app-store-number</label>
+            <app-store-number key="numeric_input" value=""></app-store-number>
+          </p>
+          <p>
+            <label>app-store-slider</label>
             <app-store-slider key="slider_1" value="0" max="1"></app-store-slider>
           </p>
           <h4>Monitoring</h4>
