--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <p>It's a nice way to communicate between apps</p>
           <h4>Check out these examples:</h4>
           <p>
-            <a href="app-store-demo/index.html"><button>UI demo</button></a>
-            <a href="app-store-monitor/index.html"><button>Monitor</button></a>
+            <a href="app-store-demo/index.html" role="button">UI demo</a>
+            <a href="app-store-monitor/index.html" role="button">Monitor</a>
           </p>
       </main>
       <footer class="container">
