modal-dialog and formatting updates

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -13,6 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="AppStore" />
     <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="email=no">
     <title>AppStore UI demo</title>
     <link rel="stylesheet" href="../shared/css/pico.css" />
     <link rel="stylesheet" href="../shared/css/styles.css" />
