Confirm button demo

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -38,6 +38,7 @@
           <nav>
             <app-store-button key="btn_pulse" value="1" momentary>Momentary / Pulse</app-store-button>
             <app-store-button key="btn_toggle" value="0" toggle>Toggle</app-store-button>
+            <app-store-button key="btn_confirm" value="true" confirm>Confirm</app-store-button>
           </nav>
           <h4>Input Fields</h4>
           <p>
