Add initial dashboard frontend/backend scripts

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <p>
             <a href="app-store-demo/index.html" role="button">UI demo</a>
             <a href="app-store-monitor/index.html" role="button">Monitor</a>
+            <a href="dashboard/index.html" role="button">Dashboard</a>
           </p>
       </main>
       <footer class="container">
