Fix entry index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="AppTitle" />
     <meta name="format-detection" content="telephone=no" />
-    <title>Socket Server Frontend</title>
+    <title>AppStore & Dashboard Utilities</title>
     <link rel="stylesheet" href="shared/css/pico.css" />
     <link rel="stylesheet" href="shared/css/styles.css" />
   </head>
@@ -29,6 +29,7 @@
             <a href="app-store-monitor/index.html" role="button">Monitor</a>
             <a href="dashboard/index.html" role="button">Dashboard</a>
           </p>
+        </section>
       </main>
       <footer class="container">
         <small>Built by us 👋</small>
