Switch to express from http server, and WIP larger refactor

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -52,6 +52,8 @@
           <p>
             <label>app-store-slider</label>
             <app-store-slider key="slider_1" value="0" max="1"></app-store-slider>
+            <app-store-slider key="MOUSE_X" value="0" max="1"></app-store-slider>
+            <app-store-slider key="MOUSE_Y" value="0" max="1"></app-store-slider>
           </p>
           <h4>Monitoring</h4>
           <p class="grid">
