--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <section>
           <h1>AppStore Demos</h1>
           <p>It's a nice way to communicate between apps</p>
-          <h4>Check out these examples:</h4>
-          <p>
-            <a href="app-store-demo/index.html" role="button">UI demo</a>
-            <a href="app-store-monitor/index.html" role="button">Monitor</a>
-            <a href="dashboard/index.html" role="button">Dashboard</a>
-          </p>
+          <h4>Check out these features:</h4>
+          <ul>
+            <li></lui><a href="app-store-demo/index.html" role="button">AppStore Demo</a></li>
+            <li></lui><a href="app-store-monitor/index.html" role="button">AppStore Monitor</a></li>
+            <li></lui><a href="dashboard/index.html" role="button">Dashboard</a></li>
+          </ul>
         </section>
       </main>
       <footer class="container">
