--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -20,13 +20,13 @@
     <script type="module" src="../shared/js/haxademic.js/components/_register-components.js"></script>
   </head>
   <body>
-    <app-store-init sender="tablet" init-keys="*" debug side-debug></app-store-init>
-    <app-store-heartbeat key="tablet_heartbeat" value="n/a" interval="5000" show="false"></app-store-heartbeat>
+    <app-store-init sender="dashboard" init-keys="*" debug side-debug></app-store-init>
+    <app-store-heartbeat key="dashboard_heartbeat" value="n/a" interval="5000" show="false"></app-store-heartbeat>
     <custom-app>
       <main class="container">
         <section>
           <h1>Dashboard</h1>
-          <dashboard-view data-api-url="http://localhost:3005/dashboard"></dashboard-view>
+          <dashboard-view data-api-url="http://localhost:3003/dashboard"></dashboard-view>
         </section>
       </main>
       <footer class="container">
