Bring in DashboardPoster frontend web example and build demo component

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -26,7 +26,7 @@
       <main class="container">
         <section>
           <h1>Dashboard</h1>
-          <dashboard-view data-api-url="http://localhost:3003/dashboard"></dashboard-view>
+          <dashboard-view data-api-url="http://localhost:3003/dashboard" refresh-interval="60"></dashboard-view>
         </section>
       </main>
       <footer class="container">
