--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li></lui><a href="app-store-demo/index.html" role="button">AppStore Demo</a></li>
             <li></lui><a href="app-store-monitor/index.html" role="button">AppStore Monitor</a></li>
             <li></lui><a href="dashboard/index.html" role="button">Dashboard</a></li>
+            <li></lui><a href="examples/dashboard/js/index.html" role="button">Dashboard POST Example</a></li>
           </ul>
         </section>
       </main>
