Move all state/dahboard routes behind /api base route

--- a/examples/dashboard/js/index.html
+++ b/examples/dashboard/js/index.html
@@ -39,7 +39,7 @@
         </section>
         <section>
           <h4>Import dashboard-view web component for easy testing:</h4>
-          <dashboard-view data-api-url="http://localhost:3003/dashboard" refresh-interval="5"></dashboard-view>
+          <dashboard-view data-api-url="http://localhost:3003/api/dashboard" refresh-interval="5"></dashboard-view>
         </section>
         <details>
           <summary>Event Log</summary>
