--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -38,9 +38,9 @@
               <details class="dropdown">
                 <summary role="button" class="secondary">Actions</summary>
                 <ul>
-                  <li><a data-state-url href="" target="_blank">/state</a></li>
-                  <li><a data-clients-url href="#" target="_blank">/clients</a></li>
-                  <li><a data-wipe-url href="#" target="_blank">/wipe</a></li>
+                  <li><a data-state-url href="#" target="_blank">/state/all</a></li>
+                  <li><a data-clients-url href="#" target="_blank">/state/clients</a></li>
+                  <li><a data-wipe-url href="#" target="_blank">/state/wipe</a></li>
                   <li>
                     <button data-zoom-out>-</button>
                     <button data-zoom-in>+</button>
