Update demos & notes

--- a/examples/dashboard/js/index.html
+++ b/examples/dashboard/js/index.html
@@ -20,6 +20,7 @@
     <script type="module" src="../../../shared/js/haxademic.js/components/_register-components.js"></script>
   </head>
   <body>
+    <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem">🏠</a>
     <app-store-init sender="dashboard_poster_example" init-keys="*" debug side-debug></app-store-init>
     <app-store-heartbeat
       key="dashboard_poster_example_heartbeat"
