--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
     <custom-app>
       <main class="container">
         <section>
-          <h1>AppStore Demos</h1>
-          <p>It's a nice way to communicate between apps</p>
+          <h1>AppStore & Dashboard Utilities</h1>
           <h4>Check out these features:</h4>
-          <ul>
-            <li></lui><a href="app-store-demo/index.html" role="button">AppStore Demo</a></li>
-            <li></lui><a href="app-store-monitor/index.html" role="button">AppStore Monitor</a></li>
-            <li></lui><a href="dashboard/index.html" role="button">Dashboard</a></li>
-            <li></lui><a href="examples/dashboard/js/index.html" role="button">Dashboard POST Example</a></li>
-          </ul>
+          <div class="grid">
+            <ul>
+              <li><a href="app-store-demo/index.html" role="button">AppStore Demo</a></li>
+              <li><a href="app-store-monitor/index.html" role="button">AppStore Monitor</a></li>
+            </ul>
+            <ul>
+              <li><a href="dashboard/index.html" role="button">Dashboard</a></li>
+              <li><a href="examples/dashboard/js/index.html" role="button">Dashboard POST Example</a></li>
+            </ul>
+          </div>
         </section>
       </main>
       <footer class="container">
