--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -25,6 +25,7 @@
     <app-store-heartbeat key="tablet_heartbeat" value="n/a" interval="5000" show="false"></app-store-heartbeat>
     <custom-app>
       <main class="container">
+        <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem; ">🏠</a>
         <section>
           <h1>AppStore Demo</h1>
           <p>A nice way to communicate between apps</p>
