--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -22,6 +22,7 @@
     <script type="module" src="../shared/js/haxademic.js/components/_register-components.js"></script>
   </head>
   <body>
+    <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem; ">🏠</a>
     <app-store-init sender="monitor" debug side-debug></app-store-init>
     <app-store-heartbeat key="monitor_heartbeat" value="n/a" interval="10000" show="false"></app-store-heartbeat>
     <custom-app>
