Fix dashboard server URL mismatch on prod

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -27,7 +27,8 @@
       <main class="container">
         <section>
           <h1>Dashboard</h1>
-          <dashboard-view data-api-url="http://localhost:3003/api/dashboard" refresh-interval="60"></dashboard-view>
+          <div id="dashboard-container"></div>
+          <!-- <dashboard-view data-api-url="http://localhost:3003/api/dashboard" refresh-interval="60"></dashboard-view> -->
         </section>
       </main>
       <footer class="container">
