--- a/examples/dashboard/js/index.html
+++ b/examples/dashboard/js/index.html
@@ -22,12 +22,7 @@
   <body>
     <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem">🏠</a>
     <app-store-init sender="dashboard_poster_example" init-keys="*" debug side-debug></app-store-init>
-    <app-store-heartbeat
-      key="dashboard_poster_example_heartbeat"
-      value="n/a"
-      interval="5000"
-      show="false"
-    ></app-store-heartbeat>
+    <app-store-heartbeat key="dashboard_post_heartbeat" value="n/a" interval="5000" show="false"></app-store-heartbeat>
     <custom-app>
       <main class="container">
         <section>
