--- a/examples/dashboard/js/index.html
+++ b/examples/dashboard/js/index.html
@@ -35,7 +35,10 @@
         </section>
         <section>
           <h4>Import dashboard-view web component for easy testing:</h4>
-          <dashboard-view data-api-url="http://localhost:3003/api/dashboard" refresh-interval="5"></dashboard-view>
+          <div id="dashboard-container">
+            <!-- Check ./js/app.js for dynamic creation of dashboard view, due to configuration needs on dev vs prod -->
+            <!-- <dashboard-view data-api-url="http://localhost:3003/api/dashboard" refresh-interval="60"></dashboard-view> -->
+          </div>
         </section>
         <details>
           <summary>Event Log</summary>
