Dashboard view hash navigation enhancements

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -29,7 +29,7 @@
           <h1>Dashboard</h1>
           <div id="dashboard-container">
             <!-- Check ./js/app.js for dynamic creation of dashboard view, due to configuration needs on dev vs prod -->
-            <!-- <dashboard-view data-api-url="http://localhost:3003/api/dashboard" refresh-interval="60"></dashboard-view> -->
+            <!-- <dashboard-view api-url="http://localhost:3003/api/dashboard" refresh-interval="60"></dashboard-view> -->
           </div>
         </section>
       </main>
