Switch default ws port in clients to 3003 since that's now shared w/http

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           <h4>Check out these features:</h4>
           <div class="grid">
             <ul>
-              <li><a href="app-store-demo/index.html" role="button">AppStore Demo</a></li>
-              <li><a href="app-store-monitor/index.html" role="button">AppStore Monitor</a></li>
+              <li><a href="app-store-demo/" role="button">AppStore Demo</a></li>
+              <li><a href="app-store-monitor/" role="button">AppStore Monitor</a></li>
             </ul>
             <ul>
-              <li><a href="dashboard/index.html" role="button">Dashboard</a></li>
-              <li><a href="examples/dashboard/js/index.html" role="button">Dashboard POST Example</a></li>
+              <li><a href="dashboard/" role="button">Dashboard</a></li>
+              <li><a href="examples/dashboard/js/" role="button">Dashboard POST Example</a></li>
             </ul>
           </div>
         </section>
