Big refactor - reorganize where files live

--- a/examples/dashboard/js/index.html
+++ b/examples/dashboard/js/index.html
@@ -17,7 +17,7 @@
     <title>Dashboard Poster Demo</title>
     <link rel="stylesheet" href="../../../shared/css/pico.css" />
     <link rel="stylesheet" href="../../../shared/css/styles.css" />
-    <script type="module" src="../../../shared/js/haxademic.js/components/_register-components.js"></script>
+    <script type="module" src="../../../src/components/_register-components.js"></script>
   </head>
   <body>
     <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem">🏠</a>
