--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -17,7 +17,7 @@
     <title>AppStore UI demo</title>
     <link rel="stylesheet" href="../shared/css/pico.css" />
     <link rel="stylesheet" href="../shared/css/styles.css" />
-    <script type="module" src="../shared/js/haxademic.js/components/_register-components.js"></script>
+    <script type="module" src="../src/components/_register-components.js"></script>
   </head>
   <body>
     <!-- <app-store-init sender="tablet" init-keys="app_state btn_toggle slider_1 text_input camera_1_health camera_2_health camera_3_health" debug side-debug></app-store-init> -->
