--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../shared/css/styles.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <script type="module" src="../shared/js/haxademic.js/components/_register-components.js"></script>
+    <script type="module" src="../src/components/_register-components.js"></script>
   </head>
   <body>
     <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem; ">🏠</a>
