--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -17,12 +17,12 @@
     <title>AppStore UI demo</title>
     <link rel="stylesheet" href="../shared/css/pico.css" />
     <link rel="stylesheet" href="../shared/css/styles.css" />
-    <script type="module" src="../shared/js/haxademic.js/components/_register-components.js"></script>
+    <script type="module" src="../src/components/_register-components.js"></script>
   </head>
   <body>
     <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem; ">🏠</a>
     <app-store-init sender="dashboard" init-keys="*" debug side-debug></app-store-init>
-    <app-store-heartbeat key="dashboard_heartbeat" value="n/a" interval="5000" show="false"></app-store-heartbeat>
+    <app-store-heartbeat key="dashboard_heartbeat" value="n/a" interval="20000" show="false"></app-store-heartbeat>
     <custom-app>
       <main class="container">
         <section>
