--- a/examples/dashboard/js-frontend/index.html
+++ b/examples/dashboard/js-frontend/index.html
@@ -6,9 +6,9 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta content="no" name="imagetoolbar" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="apple-touch-icon-precomposed" href="../../../share/images/icon.png" />
-    <link rel="apple-touch-startup-image" href="../../../shared/images/icon.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="../../../shared/images/icon.png" />
+    <link rel="apple-touch-icon-precomposed" href="/icon.png" />
+    <link rel="apple-touch-startup-image" href="/icon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/icon.png" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="AppStore" />
