--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -29,7 +29,8 @@
         <section>
           <h1>AppStore Demo</h1>
           <p>A nice way to communicate between apps</p>
-          <h4>Buttons with shared key: app_state</h4>
+          <h4>Buttons with shared key: app_state = <code><app-store-element key="app_state"></app-store-element></code></h4>
+          
           <nav>
             <app-store-button key="app_state" value="attract">Attract</app-store-button>
             <app-store-button key="app_state" value="gameplay">Gameplay</app-store-button>
@@ -52,8 +53,11 @@
           </p>
           <p>
             <label>app-store-slider</label>
+            <label>slider_1: <code><app-store-element key="slider_1"></app-store-element></code></label>
             <app-store-slider key="slider_1" value="0" max="1"></app-store-slider>
+            MOUSE_X: <code><app-store-element key="MOUSE_X"></app-store-element></code>
             <app-store-slider key="MOUSE_X" value="0" max="1"></app-store-slider>
+            MOUSE_Y: <code><app-store-element key="MOUSE_Y"></app-store-element></code>
             <app-store-slider key="MOUSE_Y" value="0" max="1"></app-store-slider>
           </p>
           <h4>Monitoring</h4>
