Broadcast clients list on enter/leave, refactor socket server broadcasting to make available to the rest of the server

--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -25,6 +25,7 @@
     <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem; ">🏠</a>
     <app-store-init sender="monitor" debug side-debug></app-store-init>
     <app-store-heartbeat key="monitor_heartbeat" value="n/a" interval="30000" show="false"></app-store-heartbeat>
+    <notyf-listener></notyf-listener>
     <custom-app>
       <header>
         <nav>
