--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -42,6 +42,7 @@
                 <ul>
                   <li><a data-state-url href="#" target="_blank">/state/all</a></li>
                   <li><a data-clients-url href="#" target="_blank">/state/clients</a></li>
+                  <li><a data-channels-url href="#" target="_blank">/state/channels</a></li>
                   <li><a data-wipe-url href="#" target="_blank">/state/wipe</a></li>
                   <li>
                     <button data-zoom-out>-</button>
