Add <auth-form> with example. Frontend only, with backend option stubbed out

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <main class="container">
         <section>
           <h1>AppStore & Dashboard Utilities</h1>
-          <h4>Check out these features:</h4>
+          <!-- <h4>Check out these features:</h4> -->
           <div class="grid">
             <ul>
               <li><a href="app-store-demo/" role="button">AppStore Demo</a></li>
@@ -31,6 +31,9 @@
             <ul>
               <li><a href="dashboard/" role="button">Dashboard</a></li>
               <li><a href="examples/dashboard/js-frontend/" role="button">Dashboard POST Example</a></li>
+            </ul>
+            <ul>
+              <li><a href="examples/auth-form/" role="button">&lt;auth-form&gt;</a></li>
             </ul>
           </div>
         </section>
